Bug 75960 - PIVOTTABLE: Clicking on page field button after load doesn't popup the field selector window.
Summary: PIVOTTABLE: Clicking on page field button after load doesn't popup the field ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.2.1.1 release
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:4.3.0 target:4.2.3
Keywords:
Depends on:
Blocks:
 
Reported: 2014-03-09 22:37 UTC by Kohei Yoshida
Modified: 2014-03-10 22:19 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
test document (16.53 KB, application/vnd.oasis.opendocument.spreadsheet)
2014-03-09 22:38 UTC, Kohei Yoshida
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Kohei Yoshida 2014-03-09 22:37:20 UTC
I'll attach a test file in the next step.

1. Open the attached document, and make sure the Pivot sheet is shown.
2. Either click on the page field button or hit Alt-Down while the cell cursor is at B2.
3. Nothing happens.

We are supposed to launch the selector window after step 2.
Comment 1 Kohei Yoshida 2014-03-09 22:38:21 UTC
Created attachment 95475 [details]
test document
Comment 2 Kohei Yoshida 2014-03-09 22:38:45 UTC
I'm on it.
Comment 3 Commit Notification 2014-03-09 22:47:10 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=93e4276addbaaf574e07f7f1a993c653c536645d

fdo#75960: Write unit test for this.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2014-03-09 22:47:22 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=057d269c5d1faf45c4c935b2f8120c45e646de65

fdo#75960: Process pivot tables after named ranges are all set.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Kohei Yoshida 2014-03-09 22:58:48 UTC
4.2 backport request: https://gerrit.libreoffice.org/8507
Comment 6 Commit Notification 2014-03-09 23:14:24 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=98bd1911420f46380aa5373a92de6a748ced080d

fdo#75960: No point instantiating the struct when there are no pivot tables.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2014-03-10 22:18:02 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e42ada4ec31142f907513fac6f9bca76dffa09de&h=libreoffice-4-2

fdo#75960: Process pivot tables after named ranges are all set.


It will be available in LibreOffice 4.2.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Kohei Yoshida 2014-03-10 22:19:38 UTC
Fixed.