fdo#75960: Process pivot tables after named ranges are all set.

Especially for those pivot tables that reference named ranges as their
data sources, it's critical that we process them after named ranges are
set. Else things would start to fail.

Change-Id: I4bf8aa1a844aae3953f2dfbeba0e4d2542a7e53f
(cherry picked from commit 057d269c5d1faf45c4c935b2f8120c45e646de65)
(cherry picked from commit 98bd1911420f46380aa5373a92de6a748ced080d)
Reviewed-on: https://gerrit.libreoffice.org/8507
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>